# cmu-10714

./: .gitignore
hw0/: CMakeLists.txt  Makefile  Makefile_old  pyproject.toml
hw0/src/: simple_ml.py  simple_ml_ext.cpp  simple_ml_ext.h  simple_ml_ext.so.old  test_simple_ext.cpp
hw0/tests/: test_simple_ml.py
hw1/: README.md  hw1.ipynb
hw1/apps/: simple_ml.py
hw1/python/needle/: autograd.py
hw1/python/needle/ops/: ops_mathematic.py
hw1/tests/hw1/: test_autograd_hw.py
hw2/: justfile  pyproject.toml
hw2/apps/: mlp_resnet.py
hw2/needle/: autograd.py  optim.py
hw2/needle/data/: data_basic.py  data_transforms.py
hw2/needle/data/datasets/: mnist_dataset.py
hw2/needle/nn/: nn_basic.py
hw2/needle/ops/: ops_logarithmic.py  ops_mathematic.py
hw2/python/needle/: autograd.py  optim.py
hw2/python/needle/init/: init_initializers.py
hw2/python/needle/nn/: nn_basic.py
hw2/python/needle/ops/: ops_logarithmic.py  ops_mathematic.py
hw2/tests/hw2/: test_data.py  test_nn_and_optim.py
hw3/: hw3.ipynb  pyproject.toml
hw3/python/needle/backend_ndarray/: ndarray.py
hw3/tests/hw3/: test_ndarray.py
